--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -9,6 +9,7 @@
     <title>Sleep Outside | Cedar Ridge Rimrock 2-person tent</title>
 
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../js/product.js">
 
     <script src="../js/product.js" type="module"></script>
   </head>
